# womap

./: .gitignore  README.md  environment.yaml  extract_result.py  main_baseline.py  main_evaluation.py  main_evaluation_refactored.py  main_planner.py  main_test.py  main_train.py  plot_experiment.py  pyproject.toml  run_single_experiment.py  submit_experiments.py
bash_scripts/: run_single_experiment_example.bash  submit_all_wm_example.bash  submit_experiments_example.bash  train_single_wm_example.bash
configs/decoder/: conv_decoder.yaml  vqvae.yaml  vqvae_s5.yaml
configs/dynamics_predictor/: vit.yaml
configs/encoder/: clip.yaml  dino.yaml  vit_small.yaml
configs/rewards_predictor/: vit.yaml  vit_with_pred_bbox.yaml
experiment_configs/example_test/: example_vlm_test.json
src/: helper.py  transforms.py
src/datasets/: active_perception_dataset.py
src/eval/: analyze_results.py  evaluator.py
src/models/: vision_transformer.py  worldmodel.py
src/models/clip/: clip.py  model.py
src/models/decoder/: transposed_conv.py  vqvae.py
src/models/encoder/: clip.py  dino.py  resnet.py
src/scenes/: gsplat_scene.py  pybullet_scene.py  scene.py
src/tests/: action_generator.py  planner.py  simple_planner.py  test_dynamics.py  test_planner.py  vlm_planner_old.py  wm_planner.py  wm_planner_old.py
src/utils/: gdino.py  loss_utils.py  result_utils.py  tensors.py  trajectory_utils.py  visualize.py  wm_utils.py
src/utils/gsplat/: splat_utils.py
